--- a/src/main/resources/com.fenrir.filesorter/controllers/MainView.fxml
+++ b/src/main/resources/com.fenrir.filesorter/controllers/MainView.fxml
@@ -1,14 +1,138 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.fenrir.filesorter.controllers.MainView"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="../../css/style.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.MainController">
+  <tabs>
+    <Tab text="Sort">
+          <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+          </content>
+    </Tab>
+      <Tab text="Source">
+          <content>
+              <BorderPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <center>
+                  <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <BorderPane.margin>
+                        <Insets left="20.0" right="20.0" top="20.0" />
+                     </BorderPane.margin>
+                  </ListView>
+               </center>
+               <bottom>
+                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Add FIle" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Add Folder" />
+                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Remove" />
+                     </children>
+                  </HBox>
+               </bottom></BorderPane>
+          </content>
+      </Tab>
+      <Tab text="Rule">
+          <content>
+              <BorderPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <left>
+                  <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                           <children>
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="+" />
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="-" />
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="U" />
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="D" />
+                           </children>
+                        </VBox>
+                        <ListView prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                     <BorderPane.margin>
+                        <Insets bottom="20.0" right="20.0" top="20.0" />
+                     </BorderPane.margin>
+                  </HBox>
+               </left>
+               <center>
+                  <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <TitledPane alignment="CENTER" collapsible="false" prefHeight="543.0" prefWidth="660.0" text="Rule 1">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <TitledPane animated="false" collapsible="false" prefHeight="75.0" styleClass="bordered-titled-border,bordered-titled-content" text="Rename">
+                                       <content>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                                             <children>
+                                                <TextField maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                                                <Button mnemonicParsing="false" text="Edit" HBox.hgrow="ALWAYS" />
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                             </padding>
+                                          </HBox>
+                                       </content>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" />
+                                       </VBox.margin>
+                                    </TitledPane>
+                                    <TitledPane animated="false" collapsible="false" prefHeight="75.0" styleClass="bordered-titled-border,bordered-titled-content" text="Sort">
+                                       <content>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                                             <children>
+                                                <TextField maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                                                <Button mnemonicParsing="false" text="Edit" HBox.hgrow="ALWAYS" />
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                             </padding>
+                                          </HBox>
+                                       </content>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" />
+                                       </VBox.margin>
+                                    </TitledPane>
+                                    <TitledPane animated="false" collapsible="false" prefHeight="286.0" styleClass="bordered-titled-border,bordered-titled-content" text="Filter">
+                                       <content>
+                                          <HBox prefHeight="100.0" prefWidth="200.0">
+                                             <children>
+                                                <ListView maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                                                <VBox alignment="CENTER" prefWidth="50.0" spacing="17.0">
+                                                   <children>
+                                                      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="+" />
+                                                      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="E" />
+                                                      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="-" />
+                                                      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="U" />
+                                                      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="D" />
+                                                   </children>
+                                                   <HBox.margin>
+                                                      <Insets right="10.0" />
+                                                   </HBox.margin></VBox>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="20.0" left="20.0" top="20.0" />
+                                             </padding></HBox>
+                                       </content>
+                                    </TitledPane>
+                                 </children>
+                              </VBox>
+                           </content>
+                        </TitledPane>
+                     </children>
+                     <BorderPane.margin>
+                        <Insets bottom="20.0" right="20.0" top="20.0" />
+                     </BorderPane.margin>
+                  </VBox>
+               </center></BorderPane>
+          </content>
+      </Tab>
+  </tabs>
+</TabPane>
