--- a/src/main/resources/com/fenrir/filesorter/controllers/RenameRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/RenameRuleEditorView.fxml
@@ -6,13 +6,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER"
+      maxHeight="-Infinity"
+      maxWidth="-Infinity"
+      minHeight="-Infinity"
+      minWidth="-Infinity"
+      xmlns="http://javafx.com/javafx/16"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.fenrir.filesorter.controllers.RenameRuleEditorController">
    <children>
       <TextField fx:id="ruleTextField" prefWidth="360.0" />
       <HBox alignment="CENTER" spacing="40.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Confirm" />
-            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Cancel" />
+            <Button mnemonicParsing="false" onAction="#confirm" prefHeight="30.0" prefWidth="100.0" text="Confirm" />
+            <Button mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="100.0" text="Cancel" />
          </children>
          <VBox.margin>
             <Insets top="20.0" />
